@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-04T00:30:41Z",
-  "count_outdated" : 1545,
-  "uniques_outdated" : 415,
-  "count" : 1565,
-  "uniques" : 427,
+  "timestamp" : "2022-06-04T08:06:14Z",
+  "count_outdated" : 1546,
+  "uniques_outdated" : 416,
+  "count" : 1566,
+  "uniques" : 428,
   "clones" : [
-    {
-      "timestamp": "2022-05-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-24T00:00:00Z",
       "count": 1,
@@ -65,6 +58,13 @@
       "timestamp": "2022-06-03T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
