@@ -1,12 +1,7 @@
 {
   "count": 20,
-  "uniques": 6,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-05-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-24T00:00:00Z",
       "count": 1,
@@ -45,6 +40,11 @@
     {
       "timestamp": "2022-06-03T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-04T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
